SONARPY-3887 Fix QG (#946)
GitOrigin-RevId: 77b6559037e7b34eaadbfa82a7b6192ff2bf3dd2